Feature/spring OIDC (#256)
* Feature/spring upgrade (#215)

* refactor(gradle): updated gradle to version 6.9

* refactor(gradle): updated gradle to version 7.6

* refactor(gradle): updated implementation semantic

* refactor(gradle): added toml for lib deps

* refactor(gradle): changed gradle structure

* refactor(gradle): updated build gradles

* refactor(gradle): trying to fix gradle

* fix(gradle): added missing version to build.gradle

Signed-off-by: jklein <justin.klein@brockhaus-ag.de>

* refactor(gradle): trying to fix gradle

* fix(gradle): fixed spring-dependency-management-plugin

Signed-off-by: jklein <justin.klein@brockhaus-ag.de>

* fix(gradle): fixed gradle build errors

Signed-off-by: jklein <justin.klein@brockhaus-ag.de>

* fix(gradle): minor changes

Signed-off-by: jklein <justin.klein@brockhaus-ag.de>

* refactor(gradle): fixing gradle

* refactor(gradle): fixed tests and updated deps

* refactor(gradle): fixing gradle

* fix(gradle spring): WIP fixed some upgrade-issues

Signed-off-by: jklein <justin.klein@brockhaus-ag.de>

* test(BE): migrated to JUnit 5

Signed-off-by: jklein <justin.klein@brockhaus-ag.de>

* refactor(gradle): renamed log4j config file, removed unused dep

* refactor(lombok): using the lombok plugin instead of the impl dep

* refactor(gradle): fixing gradle

* fix(jackson): Migrated to newest version

Signed-off-by: jklein <justin.klein@brockhaus-ag.de>

* chore(BE): added build-config

Signed-off-by: jklein <justin.klein@brockhaus-ag.de>

* refactor(BE auth): started removing the auth-server

Signed-off-by: jklein <justin.klein@brockhaus-ag.de>

* refactor(BE auth): continued removing the auth-server

Signed-off-by: jklein <justin.klein@brockhaus-ag.de>

* feat(gradle): added oauth2 dep

* refactor(spring-oauth2): commented not working tests out

* refactor(spring-oauth2): deleted not longer used files

* fix(spring-oauth2): fixed flyway and websockets