@@ -1,67 +1,49 @@
 package org.burningokr.service.settings;
 
 import com.google.common.collect.Lists;
+import lombok.RequiredArgsConstructor;
 import org.burningokr.model.activity.Action;
 import org.burningokr.model.cycles.CycleState;
 import org.burningokr.model.okrUnits.OkrCompany;
 import org.burningokr.model.okrUnits.OkrDepartment;
 import org.burningokr.model.settings.UserSettings;
-import org.burningokr.model.users.User;
+import org.burningokr.model.users.IUser;
 import org.burningokr.repositories.settings.UserSettingsRepository;
 import org.burningokr.service.activity.ActivityService;
 import org.burningokr.service.okrUnit.CompanyService;
 import org.burningokr.service.okrUnit.departmentservices.BranchHelper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class UserSettingsService {
 
   private final Logger logger = LoggerFactory.getLogger(UserSettingsService.class);
-  private UserSettingsRepository userSettingsRepository;
-  private ActivityService activityService;
-  private CompanyService companyService;
-
-  /**
-   * Initialize UserSettingsService.
-   *
-   * @param userSettingsRepository an {@link UserSettingsRepository} object
-   * @param activityService        an {@link ActivityService} object
-   * @param companyService         a {@link CompanyService} object
-   */
-  @Autowired
-  public UserSettingsService(
-    UserSettingsRepository userSettingsRepository,
-    ActivityService activityService,
-    CompanyService companyService
-  ) {
-    this.userSettingsRepository = userSettingsRepository;
-    this.activityService = activityService;
-    this.companyService = companyService;
-  }
+  private final UserSettingsRepository userSettingsRepository;
+  private final ActivityService activityService;
+  private final CompanyService companyService;
 
   /**
    * Gets the User Settings of a given User.
    *
-   * @param user an {@link User} object
+   * @param IUser an {@link IUser} object
    * @return an {@link UserSettings} object
    */
-  public UserSettings getUserSettingsByUser(User user) {
-    UserSettings userSettings = userSettingsRepository.findUserSettingsByUserId(user.getId());
+  public UserSettings getUserSettingsByUser(IUser IUser) {
+    UserSettings userSettings = userSettingsRepository.findUserSettingsByUserId(IUser.getId());
     if (userSettings == null) {
       userSettings = new UserSettings();
-      userSettings.setUserId(user.getId());
+      userSettings.setUserId(IUser.getId());
       userSettings.setDefaultOkrCompany(getDefaultCompany());
-      userSettings.setDefaultTeam(getDefaultTeam(user, userSettings.getDefaultOkrCompany()));
+      userSettings.setDefaultTeam(getDefaultTeam(IUser, userSettings.getDefaultOkrCompany()));
       userSettings = userSettingsRepository.save(userSettings);
-      activityService.createActivity(user, userSettings, Action.CREATED);
-      logger.info(
+      activityService.createActivity(userSettings, Action.CREATED);
+      logger.debug(
         "Created User Settings "
           + userSettings.getName()
           + "(id: "
@@ -75,14 +57,14 @@ public class UserSettingsService {
     Collection<OkrCompany> okrCompanyCollection =
       companyService.getAllCompanies().stream()
         .filter(company -> company.getCycle().getCycleState() == CycleState.ACTIVE)
-        .collect(Collectors.toList());
+        .toList();
     if (okrCompanyCollection.size() == 1) {
       return (OkrCompany) okrCompanyCollection.toArray()[0];
     }
     return null;
   }
 
-  private OkrDepartment getDefaultTeam(User user, OkrCompany okrCompany) {
+  private OkrDepartment getDefaultTeam(IUser IUser, OkrCompany okrCompany) {
     if (okrCompany == null) {
       return null;
     }
@@ -93,41 +75,40 @@ public class UserSettingsService {
     }
     List<OkrDepartment> departmentsWhereUserIsSponsor =
       okrDepartments.stream()
-        .filter(department -> isUserSponsorOrOkrMasterInDepartment(user, department))
-        .collect(Collectors.toList());
+        .filter(department -> isUserSponsorOrOkrMasterInDepartment(IUser, department))
+        .toList();
     if (departmentsWhereUserIsSponsor.size() == 1) {
       return departmentsWhereUserIsSponsor.get(0);
     }
     List<OkrDepartment> departmentsWhereUserIsMember =
       okrDepartments.stream()
-        .filter(department -> isUserMemberInDepartment(user, department))
-        .collect(Collectors.toList());
+        .filter(department -> isUserMemberInDepartment(IUser, department))
+        .toList();
     if (departmentsWhereUserIsMember.size() == 1) {
       return departmentsWhereUserIsMember.get(0);
     }
     return null;
   }
 
-  private boolean isUserSponsorOrOkrMasterInDepartment(User user, OkrDepartment okrDepartment) {
+  private boolean isUserSponsorOrOkrMasterInDepartment(IUser IUser, OkrDepartment okrDepartment) {
     return (okrDepartment.getOkrTopicSponsorId() != null
-      && okrDepartment.getOkrTopicSponsorId().equals(user.getId()))
+      && okrDepartment.getOkrTopicSponsorId().equals(IUser.getId()))
       || (okrDepartment.getOkrMasterId() != null
-      && okrDepartment.getOkrMasterId().equals(user.getId()));
+      && okrDepartment.getOkrMasterId().equals(IUser.getId()));
   }
 
-  private boolean isUserMemberInDepartment(User user, OkrDepartment okrDepartment) {
+  private boolean isUserMemberInDepartment(IUser IUser, OkrDepartment okrDepartment) {
     return okrDepartment.getOkrMemberIds().stream()
-      .anyMatch(memberId -> memberId.equals(user.getId()));
+      .anyMatch(memberId -> memberId.equals(IUser.getId()));
   }
 
   /**
    * Updates the User Settings.
    *
    * @param userSettings an {@link UserSettings} object
-   * @param user         an {@link User} object
    * @return an {@link UserSettings} object
    */
-  public UserSettings updateUserSettings(UserSettings userSettings, User user) {
+  public UserSettings updateUserSettings(UserSettings userSettings) {
     UserSettings dbUserSettings = userSettingsRepository.findByIdOrThrow(userSettings.getId());
 
     dbUserSettings.setDefaultOkrCompany(userSettings.getDefaultOkrCompany());
